examples/openshift/spark-history-server/minio/spark-history-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-history-server
  namespace: spark-test
  labels:
    app: spark-history-server
spec:
  selector:
    matchLabels:
      app: spark-history-server
  template:
    metadata:
      labels:
        app: spark-history-server
    spec:
      serviceAccountName: spark-operator-spark
      containers:
      - name: spark-history-server
        image: quay.io/ssankepe/spark-s3:4.0.1
        imagePullPolicy: Always
        command: ["/opt/spark/sbin/start-history-server.sh"]
---
apiVersion: v1
kind: Service
metadata:
  name: spark-history-server
  namespace: spark-test
spec:
  selector:
    app: spark-history-server
  ports:
  - port: 18080
    targetPort: 18080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: spark-history-server
  namespace: spark-test
  labels:
    app: spark-history-server
spec:
  port:
    targetPort: 18080
  to:
    kind: Service
    name: spark-history-server
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
